# machine_learning

./: .gitignore  README.md  config.py  main.py  pyproject.toml
dataset/: indeks_risiko_bencana_berdasarkan_kabupatenkota_v1_data.xlsx  jml_bencana_banjir__kabupatenkota_v3_data.xlsx  jml_bencana_cuaca_ekstrem__kabupatenkota_v3_data.xlsx  jml_bencana_gempa_bumi__kabupatenkota_v4_data.xlsx  jml_kejadian_bencana_tanah_longsor__des_kel_data.xlsx  jml_kerusakan_rumahtempat_tinggal_akibat_bencana___v2_data.xlsx
src/: data_loader.py  geo_processor.py  visualizer.py
