[project]
name = "analisis-bencana-JABAR"
version = "0.1.0"
description = "Project Machine Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyogrio>=0.12.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
